--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // Osadzanie chatu Twitcha dynamicznie
         var chatDiv = document.getElementById("twitch-chat");
         var chatIframe = document.createElement("iframe");
-        chatIframe.src = "https://www.twitch.tv/embed/MajsterRelaksu/chat?parent=https://localhost";
+        chatIframe.src = "https://www.twitch.tv/embed/MajsterRelaksu/chat?parent=dev.twitch.tv";
         chatIframe.width = "350";
         chatIframe.height = "500";
         chatDiv.appendChild(chatIframe);
