--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="logo.png" alt="Logo strony" class="logo">
+        <img src="Majsterlogo.png" alt="Logo strony" class="logo">
         <nav>
             <a href="podstrona1.html">Podstrona 1</a>
             <a href="podstrona2.html">Podstrona 2</a>
