--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <footer>
         <a href="https://www.tiktok.com/@majsterrelaksu"><img src="image-1.png" alt="Obraz 1"></a>
-        <a href="https://link2.com"><img src="obraz2.jpg" alt="Obraz 2"></a>
+        <a href="https://link2.com"><img src="logoyt.png" alt="Obraz 2"></a>
         <a href="https://link3.com"><img src="obraz3.jpg" alt="Obraz 3"></a>
     </footer>
 
