--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </main>
 
     <footer>
-        <a href="https://www.tiktok.com/@majsterrelaksu"><img src="image-1.png" alt="Obraz 1"></a>
-        <a href="https://www.youtube.com/@majster_relaksu"><img src="logoyt.png" alt="Obraz 2"></a>
-        <a href="https://www.twitch.tv/majsterrelaksu"><img src="logotw.png" alt="Obraz 3"></a>
+        <a href="https://www.tiktok.com/@majsterrelaksu" target="_blank"><img src="image-1.png" alt="Obraz 1"></a>
+        <a href="https://www.youtube.com/@majster_relaksu" target="_blank"><img src="logoyt.png" alt="Obraz 2"></a>
+        <a href="https://www.twitch.tv/majsterrelaksu" target="_blank"><img src="logotw.png" alt="Obraz 3"></a>
     </footer>
 
 </body>
