--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+2<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <header>
         <img src="logomajsterr.png" alt="Logo strony" class="logo">
         <nav>
-            <a href="podstrona1.html">Podstrona 1</a>
+            <a href="index2.html">Podstrona 1</a>
             <a href="podstrona2.html">Podstrona 2</a>
         </nav>
     </header>
