--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div class="tlo">
+    
+    </div>
+
     <header>
         <img src="logomajsterr.png" alt="Logo strony" class="logo">
         <nav>
