--- a/index.html
+++ b/index.html
@@ -7,43 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="tlo">
+        <header>
+            <img src="logomajsterr.png" alt="Logo strony" class="logo">
+            <nav>
+                <a href="index2.html">Podstrona 1</a>
+                <a href="podstrona2.html">Podstrona 2</a>
+            </nav>
+        </header>
 
-    <header>
-        <img src="logomajsterr.png" alt="Logo strony" class="logo">
-        <nav>
-            <a href="index2.html">Podstrona 1</a>
-            <a href="podstrona2.html">Podstrona 2</a>
-        </nav>
-    </header>
+        <main>
+            <section class="stream-container">
+                <!-- Osadzony odtwarzacz Twitch -->
+                <iframe
+                    id="twitch-player"
+                    src="https://player.twitch.tv/?channel=MajsterRelaksu&parent=TheNexo621.github.io"
+                    width="800"
+                    height="500"
+                    frameborder="0"
+                    allowfullscreen>
+                </iframe>
 
-    <main>
-        <section class="stream-container">
-            <!-- Osadzony odtwarzacz Twitch -->
-            <iframe
-                id="twitch-player"
-                src="https://player.twitch.tv/?channel=MajsterRelaksu&parent=TheNexo621.github.io"
-                width="800"
-                height="500"
-                frameborder="0"
-                allowfullscreen>
-            </iframe>
+                <!-- Osadzony czat Twitch -->
+                <iframe
+                    id="twitch-chat"
+                    src="https://www.twitch.tv/embed/MajsterRelaksu/chat?parent=TheNexo621.github.io"
+                    width="350"
+                    height="500"
+                    frameborder="0">
+                </iframe>
+            </section>
+        </main>
 
-            <!-- Osadzony czat Twitch -->
-            <iframe
-                id="twitch-chat"
-                src="https://www.twitch.tv/embed/MajsterRelaksu/chat?parent=TheNexo621.github.io"
-                width="350"
-                height="500"
-                frameborder="0">
-            </iframe>
-        </section>
-    </main>
-
-    <footer>
-        <a href="https://www.tiktok.com/@majsterrelaksu" target="_blank"><img src="image-1.png" alt="Obraz 1"></a>
-        <a href="https://www.youtube.com/@majster_relaksu" target="_blank"><img src="logoyt.png" alt="Obraz 2"></a>
-        <a href="https://www.twitch.tv/majsterrelaksu" target="_blank"><img src="logotw.png" alt="Obraz 3"></a>
-    </footer>
-
+        <footer>
+            <a href="https://www.tiktok.com/@majsterrelaksu" target="_blank"><img src="image-1.png" alt="Obraz 1"></a>
+            <a href="https://www.youtube.com/@majster_relaksu" target="_blank"><img src="logoyt.png" alt="Obraz 2"></a>
+            <a href="https://www.twitch.tv/majsterrelaksu" target="_blank"><img src="logotw.png" alt="Obraz 3"></a>
+        </footer>
+    </div>
 </body>
 </html>
