--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="tlo">
         <header>
-            <img src="logomajsterr.png" alt="Logo strony" class="logo">
+            <img src="logomajsterrr.png" alt="Logo strony" class="logo">
             <nav>
                 <a href="index2.html">Podstrona 1</a>
                 <a href="podstrona2.html">Podstrona 2</a>
